--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
  <!-- stats - count particles --> 
 
 <!-- particles.js lib - https://github.com/VincentGarreau/particles.js --> 
-<script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js">
+<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js">
 </script> <!-- stats.js lib --> 
 </script>
 
