--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     <!-- stats - count particles -->
     <!-- particles.js lib - https://github.com/VincentGarreau/particles.js -->
-    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js">
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js">
     </script> <!-- stats.js lib -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
